Добавление функционала перемещения мышью. ScaledObjectAdapter.java адаптер для трасформации координат при шкалировании. DiagramView.scaledAdapter для трансформации координат DiagramView.java добавление отрисовки прямоугольника выделения объектов. Обработка нажатий на клавиатуру для удаления элементов и шкалирования плоскости Styles.java переименованы переменные.